# snapped_ros1_pkg

./: CMakeLists.txt  README.md  package.xml
launch/: snapped.launch
snap/: snapcraft.yaml
snapped_ros1_pkg/: CMakeLists.txt  README.md
snapped_ros1_pkg/src/: node.cpp
src/: node.cpp
tmp_script/: talker_from_the_past.sh
